# Firebase_ESP_Client

./: CMakeLists.txt  library.json  library.properties
src/: CustomFirebaseFS.h  FB_Const.h  Firebase.cpp  FirebaseFS.h
src/client/: FB_TCP_Client.h
src/client/SSLClient/: Custom_ESP_SSLClient_FS.h  ESP_SSLClient_FS.h
src/client/SSLClient/client/: BSSL_SSL_Client.cpp
src/core/: FirebaseCore.cpp  FirebaseCore.h  Firebase_Build_Options.h  Firebase_Client_Version.h
